--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,48 @@
-.players{
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+/* style */
+body{
+    font-family: 'Poppins', sans-serif;
+    background-color: #F3F1FF;
+}
+main{
+    display: flex;
+    justify-content: center;
+}
+.container{
+    background-color: #FFFFFF;
+    width: 870px;
+    padding: 30px;
+}
+hr{
+    border: 1px solid #D1D1D1;
+}
+.section-title{
+    color: blue;
+    font-size: 24px;
+    margin-top: 3px;
+}
+/* top-players-style */
+.top-players{
+    margin-bottom: 30px;
+}
+.players {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    /* grid-template-columns: 1fr 1fr 1fr; */
+    grid-row-gap:30px;
 }
-.player{
+
+.player {
     display: flex;
     align-items: center;
 }
-.player img{
+
+.player img {
     width: 56px;
     height: 56px;
+}
+.player-name{
+    margin-left: 16px;
+    font-size: 18px;
 }
