--- a/styles/style.css
+++ b/styles/style.css
@@ -1,36 +1,44 @@
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+
 /* style */
-body{
+body {
     font-family: 'Poppins', sans-serif;
     background-color: #F3F1FF;
 }
-main{
+
+main {
     display: flex;
     justify-content: center;
 }
-.container{
+
+.container {
     background-color: #FFFFFF;
     width: 870px;
     padding: 30px;
 }
-hr{
+
+hr {
     border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
 }
-.section-title{
+
+.section-title {
     color: blue;
     font-size: 24px;
     margin-top: 3px;
 }
+
 /* top-players-style */
-.top-players{
+.top-players {
     margin-bottom: 30px;
 }
+
 .players {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     /* grid-template-columns: 1fr 1fr 1fr; */
-    grid-row-gap:30px;
+    grid-row-gap: 30px;
 }
 
 .player {
@@ -42,7 +50,41 @@ hr{
     width: 56px;
     height: 56px;
 }
-.player-name{
+
+.player-name {
     margin-left: 16px;
     font-size: 18px;
+}
+
+/* -------------
+top blog style
+---------------- */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap:26px;
+}
+.blog{
+    display: flex;
+}
+
+.blog img {
+    width: 177px;
+    height: 117px;
+}
+
+.blog-info {
+    margin-left: 16px;
+}
+.blog-title{
+    font-size: 20px;
+}
+.blog-author {
+    font-size: 16px;
+    color: #9F9F9F;
+}
+.blog-author a{
+    text-decoration: none;
+    font-size: 16px;
+    color: #562EFF;
 }
