--- a/styles/style.css
+++ b/styles/style.css
@@ -9,13 +9,16 @@ body {
 
 main {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .container {
     background-color: #FFFFFF;
     width: 870px;
     padding: 30px;
+    margin-top: 21px;
+    border-radius: 5px;
 }
 
 hr {
@@ -59,12 +62,13 @@ hr {
 /* -------------
 top blog style
 ---------------- */
-.blogs{
+.blogs {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-row-gap:26px;
+    grid-row-gap: 26px;
 }
-.blog{
+
+.blog {
     display: flex;
 }
 
@@ -76,15 +80,26 @@ top blog style
 .blog-info {
     margin-left: 16px;
 }
-.blog-title{
+
+.blog-title {
     font-size: 20px;
 }
+
 .blog-author {
     font-size: 16px;
     color: #9F9F9F;
 }
-.blog-author a{
+
+.blog-author a {
     text-decoration: none;
     font-size: 16px;
     color: #562EFF;
+}
+
+/* -----------------
+    Latest Course 
+---------------------*/
+.course .course-banner img {
+    width: 224px;
+    height: 104px;
 }
