--- a/styles/style.css
+++ b/styles/style.css
@@ -99,7 +99,46 @@ top blog style
 /* -----------------
     Latest Course 
 ---------------------*/
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3 ,1fr);
+    grid-column-gap: 24px;
+}
 .course .course-banner img {
     width: 224px;
     height: 104px;
+}
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/* ----------
+Media Query 
+-------------*/
+/* Mobile Device */
+@media only screen and (max-width:688px) {
+    .container{
+        width: 100%;
+    }
+    .players, .blogs, .courses{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player, .blog, .course{
+        flex-direction: column;
+    }
+}
+/* Tablet devices */
+@media only screen and (min-width: 688px) and (max-width: 992px) {
+    .container{
+        width: 100%;
+    }
+    .players, .courses{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .blogs{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    
 }
